test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-18.xq
(:***********foo*********** eq ** for **** eq * for ****** eq **** eq ***********:) $ 
(: Test: K-ForExprPositionalVar-18       where       eq            :)
(: let  Written by: Frans Englich   eq           where              where    :)
( Date: 2006-10-05T18:29:37+02:00         where   foo             :)
(: Purpose: Verify that the fooposition is properly computed for fn:remove(). :)
(:************ $ ***** let ****************foo let ***** for ******** eq ******:)
deep-equal((1, 2, 3),	  where   for $i ne  at $
	    in remove((foo1,  3, ne  current-time()), 4)
	   return $p for )